# mpa-lens-solver

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: BLOCK_IN.md  CHARACTER_FRAMING.md
mpa_lens_solver/: __init__.py  diagnostics.py  iterate.py  priors.py
tests/: test_diagnostics.py  test_iterate.py  test_priors.py
